{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 452,
  "lineage": "2b6dbd72-c19c-f428-cad5-b827f456368d",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:security-group/sg-078498394ed364384",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-078498394ed364384",
            "ingress": [],
            "name": "pyhton-docker-eks-cluster-620326391ea4c9e641a9c3bb35",
            "name_prefix": "pyhton-docker-eks-cluster-",
            "owner_id": "201937185028",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-cluster",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-cluster",
              "Project": "pyhton-docker"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "sg-078498394ed364384",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:security-group/sg-0903249c249f99366",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0903249c249f99366",
            "ingress": [],
            "name": "pyhton-docker-eks-node-cb80ac2baff1471fa5a0a9195a",
            "name_prefix": "pyhton-docker-eks-node-",
            "owner_id": "201937185028",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-node",
              "Project": "pyhton-docker",
              "kubernetes.io/cluster/pyhton-docker-eks": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-node",
              "Project": "pyhton-docker",
              "kubernetes.io/cluster/pyhton-docker-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "sg-0903249c249f99366",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-75411317",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-078498394ed364384",
            "security_group_rule_id": "sgr-0d69141a82f32ab11",
            "self": false,
            "source_security_group_id": "sg-0903249c249f99366",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1456908658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-0903249c249f99366",
            "security_group_rule_id": "sgr-07a9255c472d0a1d2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_10251_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 10251/tcp webhook",
            "from_port": 10251,
            "id": "sgrule-4174495565",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0903249c249f99366",
            "security_group_rule_id": "sgr-042fd39b7054a822d",
            "self": false,
            "source_security_group_id": "sg-078498394ed364384",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3233682240",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0903249c249f99366",
            "security_group_rule_id": "sgr-0c8278c6a12eea671",
            "self": false,
            "source_security_group_id": "sg-078498394ed364384",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1381308857",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0903249c249f99366",
            "security_group_rule_id": "sgr-05ceff39da038f7e4",
            "self": false,
            "source_security_group_id": "sg-078498394ed364384",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2602008111",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0903249c249f99366",
            "security_group_rule_id": "sgr-09fd4a3c5175265d1",
            "self": false,
            "source_security_group_id": "sg-078498394ed364384",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2286633486",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0903249c249f99366",
            "security_group_rule_id": "sgr-084ababe16fd90999",
            "self": false,
            "source_security_group_id": "sg-078498394ed364384",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3974787525",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0903249c249f99366",
            "security_group_rule_id": "sgr-0d1a04c1b4e0dfd0e",
            "self": false,
            "source_security_group_id": "sg-078498394ed364384",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3432574774",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0903249c249f99366",
            "security_group_rule_id": "sgr-0ea9b61324378d9b0",
            "self": false,
            "source_security_group_id": "sg-078498394ed364384",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2652914857",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0903249c249f99366",
            "security_group_rule_id": "sgr-021f3bd768569343f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1305704782",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0903249c249f99366",
            "security_group_rule_id": "sgr-00dfe0a7404584cc8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3918322337",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "ap-south-1",
            "security_group_id": "sg-0903249c249f99366",
            "security_group_rule_id": "sgr-04fad4844582a11f6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:network-acl/acl-07213a42479e3a09e",
            "default_network_acl_id": "acl-07213a42479e3a09e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07213a42479e3a09e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "201937185028",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-034ed27bd71634b05",
              "subnet-09adbd7675de001b5",
              "subnet-0a48ae3fc2307bd43",
              "subnet-0d879fb0b2175377b"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-default",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-default",
              "Project": "pyhton-docker"
            },
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:route-table/rtb-095e72c868d7abf5e",
            "default_route_table_id": "rtb-095e72c868d7abf5e",
            "id": "rtb-095e72c868d7abf5e",
            "owner_id": "201937185028",
            "propagating_vgws": null,
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-default",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-default",
              "Project": "pyhton-docker"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:security-group/sg-0d4ad11d43972987b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d4ad11d43972987b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "201937185028",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-default",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-default",
              "Project": "pyhton-docker"
            },
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01829e2487e655810",
            "arn": "arn:aws:ec2:ap-south-1:201937185028:elastic-ip/eipalloc-01829e2487e655810",
            "domain": "vpc",
            "id": "eipalloc-01829e2487e655810",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-35-154-78-23.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.78.23",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-ap-south-1a",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-ap-south-1a",
              "Project": "pyhton-docker"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "eipalloc-01829e2487e655810",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:internet-gateway/igw-0b2eab35b7e9985ea",
            "id": "igw-0b2eab35b7e9985ea",
            "owner_id": "201937185028",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc",
              "Project": "pyhton-docker"
            },
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "igw-0b2eab35b7e9985ea",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01829e2487e655810",
            "association_id": "eipassoc-0b1efc2b0454ec0f1",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-09a753ffe448b30d9",
            "network_interface_id": "eni-00621913617ff8843",
            "private_ip": "10.0.101.215",
            "public_ip": "35.154.78.23",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d879fb0b2175377b",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-ap-south-1a",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-ap-south-1a",
              "Project": "pyhton-docker"
            },
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "nat-09a753ffe448b30d9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a9e3b385cbeca8fd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09a753ffe448b30d9",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a9e3b385cbeca8fd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0a9e3b385cbeca8fd"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2eab35b7e9985ea",
            "id": "r-rtb-0dfbc44a9110f6ae61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0dfbc44a9110f6ae6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0dfbc44a9110f6ae6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:route-table/rtb-0a9e3b385cbeca8fd",
            "id": "rtb-0a9e3b385cbeca8fd",
            "owner_id": "201937185028",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-private",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-private",
              "Project": "pyhton-docker"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "rtb-0a9e3b385cbeca8fd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:route-table/rtb-0dfbc44a9110f6ae6",
            "id": "rtb-0dfbc44a9110f6ae6",
            "owner_id": "201937185028",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-public",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-public",
              "Project": "pyhton-docker"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "rtb-0dfbc44a9110f6ae6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0611f358c7f8fb164",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a9e3b385cbeca8fd",
            "subnet_id": "subnet-09adbd7675de001b5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "rtbassoc-0611f358c7f8fb164",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098f82796e4bb160a",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a9e3b385cbeca8fd",
            "subnet_id": "subnet-034ed27bd71634b05"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "rtbassoc-098f82796e4bb160a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09910bf8f74f2f418",
            "region": "ap-south-1",
            "route_table_id": "rtb-0dfbc44a9110f6ae6",
            "subnet_id": "subnet-0d879fb0b2175377b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "rtbassoc-09910bf8f74f2f418",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e065ff8de6f424e5",
            "region": "ap-south-1",
            "route_table_id": "rtb-0dfbc44a9110f6ae6",
            "subnet_id": "subnet-0a48ae3fc2307bd43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "rtbassoc-0e065ff8de6f424e5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:subnet/subnet-09adbd7675de001b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09adbd7675de001b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201937185028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-private-ap-south-1a",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-private-ap-south-1a",
              "Project": "pyhton-docker"
            },
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "subnet-09adbd7675de001b5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:subnet/subnet-034ed27bd71634b05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034ed27bd71634b05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201937185028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-private-ap-south-1b",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-private-ap-south-1b",
              "Project": "pyhton-docker"
            },
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "subnet-034ed27bd71634b05",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:subnet/subnet-0d879fb0b2175377b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d879fb0b2175377b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201937185028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-public-ap-south-1a",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-public-ap-south-1a",
              "Project": "pyhton-docker"
            },
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "subnet-0d879fb0b2175377b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:subnet/subnet-0a48ae3fc2307bd43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a48ae3fc2307bd43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201937185028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-public-ap-south-1b",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc-public-ap-south-1b",
              "Project": "pyhton-docker"
            },
            "vpc_id": "vpc-02cc5d28f3ffce2f6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "subnet-0a48ae3fc2307bd43",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:201937185028:vpc/vpc-02cc5d28f3ffce2f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07213a42479e3a09e",
            "default_route_table_id": "rtb-095e72c868d7abf5e",
            "default_security_group_id": "sg-0d4ad11d43972987b",
            "dhcp_options_id": "dopt-0de73cb50e09379fa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02cc5d28f3ffce2f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095e72c868d7abf5e",
            "owner_id": "201937185028",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc",
              "Project": "pyhton-docker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pyhton-docker-eks-vpc",
              "Project": "pyhton-docker"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201937185028",
            "id": "vpc-02cc5d28f3ffce2f6",
            "region": "ap-south-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}